@@ -1,0 +1,6 @@
+# DESKTOP wm_class;desktop number;0=follow 1=don't;
+# DESKTOP Thunar;2;0;
+# DESKTOP MPlayer;4;1;
+
+# POSITION wm_class;x;y;width;height;
+# POSITION Thunar;100;100;800;400;
