@@ -1,0 +1,46 @@
+# P0ssible Mods are Alt, CtrlAlt, ShftAlt, Super
+# DESKTOPCHANGE results in :
+#               Alt+key         to change_desktops
+#               Shift+Alt+key   to follow_client_to_desktop
+#               Shift+Super+key to send client_to_desktop
+
+CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
+CMD xtermcmd;xterm;NULL;
+
+KEY DESKTOPCHANGE;1;0;
+KEY DESKTOPCHANGE;2;1;
+KEY DESKTOPCHANGE;3;2;
+KEY DESKTOPCHANGE;4;3;
+KEY DESKTOPCHANGE;5;4;
+KEY DESKTOPCHANGE;6;5;
+
+KEY Alt;a;rotate_mode;1;
+KEY Alt;h;resize_master;10;
+KEY Alt;j;next_win;
+KEY Alt;k;prev_win;
+KEY Alt;l;resize_master;-10;
+KEY Alt;p;resize_stack;10;
+KEY Alt;o;resize_stack;-10;
+KEY Alt;u;update_config;
+KEY Alt;v;spawn;dmenucmd;
+KEY Alt;Tab;last_desktop;
+
+KEY ShftAlt;m;more_master;1;
+KEY ShftAlt;l;more_master;-1;
+KEY ShftAlt;k;move_down;10;
+KEY ShftAlt;j;move_up;-10;
+KEY ShftAlt;o;move_left;-10;
+KEY ShftAlt;p;move_right;10;
+KEY ShftAlt;v;switch_mode;0;
+KEY ShftAlt;f;switch_mode;1;
+KEY ShftAlt;h;switch_mode;2;
+KEY ShftAlt;g;switch_mode;3;
+KEY ShftAlt;c;switch_mode;4;
+KEY ShftAlt;Return;swap_master;
+
+KEY Super;b;toggle_bar;
+KEY Super;Right;rotate_desktop;1;
+KEY Super;Left;rotate_desktop;-1;
+KEY Super;t;spawn;xtermcmd;
+
+KEY CtrlAlt;q;quit;
